src/test/ui/foreign-fn-return-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/foreign-fn-return-lifetime.rs:5:19
   |
LL |     pub fn f() -> &u8;
   |                   ^ help: consider giving it a 'static lifetime: `&'static`
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
